# advent_of_code

./: .gitignore  .gitmodules
2024/Dyr-El-python/: d2024_05.py  d2024_06.py  d2024_07.py  d2024_08.py  d2024_09.py  d2024_10.py  d2024_11.py  d2024_12.py  d2024_13.py  d2024_14.py  d2024_15.py
2024/Dyr-El-python/tests/: test_aoc_prepare.py  test_grid.py  test_parse.py  test_vec.py
2024/Dyr-El-python/utils/: grid.py  parse.py  vec.py
2024/Mikael-Eklund-Python/: main.py
2024/Mikael-Eklund-Python/advent_of_code/solutions/: day06.py  day07.py  day08.py
2024/albert-arvidsson-polyglot/day_07/part_1/: solve.rb
2024/estomagordo-python/: initializer.py
2024/fronkan-python/: .gitignore  pyproject.toml
2024/fronkan-python/day06/: solution.py  test_day6.py
2024/fronkan-python/day07/: solution.py  test_day7.py
2024/fronkan-python/day08/: solution.py  test_day8.py
2024/fronkan-python/day09/: solution.py  test_day9.py
2024/fronkan-python/day10/: solution.py  test_day10.py
2024/fronkan-python/day11/: solution.py  test_day11.py
2024/fronkan-python/day12/: solution.py  test_day12.py
2024/fronkan-python/day13/: solution.py  test_day13.py
2024/loke-kap/: part05.kap  part06.kap  part07.kap  part08.kap  part09.kap  part10.kap  part11.kap  part12.kap  part13.kap  part14.kap  part16.kap  part17.kap  part22.kap  part23.kap  part24.kap  part25.kap
2024/meconer-ocaml/: .gitignore
2024/meconer-ocaml/lib/day10/: day10.ml
2024/meconer-ocaml/lib/day11/: day11.ml
2024/meconer-ocaml/lib/day12/: day12.ml
2024/meconer-ocaml/lib/day13/: day13.ml  dune
(+29 files in other folders)
